--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -4,6 +4,6 @@
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
         <property name="java-output-path" value="/superInvent/build/classes"/>
-        <property name="context-root" value="inventory"/>
+        <property name="context-root" value="Super-Inventory"/>
     </wb-module>
 </project-modules>
